# article.cli

./: .gitignore  DEVELOPMENT.md  PYPI_SETUP.md  README.md  antora-playbook.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: configuration.adoc  index.adoc  install.adoc  lifecycle.adoc  migration.adoc
docs/modules/ROOT/pages/reference/: commands.adoc  docs-site.adoc  templates.adoc
docs/modules/ROOT/pages/tutorials/: existing-paper.adoc  new-paper.adoc  release-paper.adoc
scripts/: bump_version.py
src/article_cli/: __init__.py  cli.py  command_runner.py  config.py  doctor.py  fonts.py  git_hooks.py  git_manager.py  latex_compiler.py  project_context.py  reporting.py  repository_setup.py  template_renderer.py  themes.py  typst_compiler.py  zotero.py
src/article_cli/commands/: __init__.py  bibtex.py  clean.py  compile.py  config.py  doctor.py  fonts.py  init.py  release.py  setup.py  themes.py  version.py
src/article_cli/services/: __init__.py  bibliography.py  compiler.py  git.py  gitinfo.py  release.py  workflow.py
src/article_cli/templates/: __init__.py
src/article_cli/templates/article/: ieee.tex.j2  lncs.tex.j2  lncs.typ.j2  main.tex.j2  main.typ.j2
src/article_cli/templates/github/: latex.yml.j2
src/article_cli/templates/poster/: poster.tex.j2  poster.typ.j2
src/article_cli/templates/presentation/: beamer.tex.j2  typst.typ.j2
src/article_cli/templates/project/: README.md.j2  gitignore.j2  pyproject.toml.j2  vscode-settings.json.j2
tests/: test_cli.py  test_config.py  test_doctor.py  test_latex_compiler.py  test_project_context.py  test_release_service.py  test_repository_setup.py  test_services.py  test_template_renderer.py  test_typst_compiler.py  test_version_consistency.py  test_workflow_ci.py  test_zotero_bibliography.py
tests/golden/: __init__.py  article_main.tex
