[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "article-cli"
version = "1.5.0"
authors = [
    {name = "Christophe Prud'homme", email = "prudhomm@cemosis.fr"},
]
description = "CLI tool for managing LaTeX and Typst documents with git integration and Zotero bibliography"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
keywords = ["latex", "typst", "git", "zotero", "bibliography", "academic", "research", "presentations"]
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black==25.11.0",
    "flake8>=6.0",
    "mypy>=1.0,<2.0",
    "build>=1.2.0",
    "twine>=5.0.0",
    "types-requests",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black==25.11.0",
    "flake8>=6.0",
    "mypy>=1.0,<2.0",
    "build>=1.2.0",
    "twine>=5.0.0",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/feelpp/article.cli"
Documentation = "https://github.com/feelpp/article.cli#readme"
Repository = "https://github.com/feelpp/article.cli.git"
Issues = "https://github.com/feelpp/article.cli/issues"

[project.scripts]
article-cli = "article_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/article_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relax for now to avoid breaking changes
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true 
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
